Compiler/fasto/tests/negate_neg1.err
Type error: In Negate ~: The subexpression type is not an Int: bool at line 2, column 17