Compiler/fasto/tests/negate_neg1.fo
fun int main () = 
  let w = write(~true) in 0